--- a/index.html
+++ b/index.html
@@ -235,7 +235,12 @@
 
   <script>
     // OpenWeather API Key - Important: In a production environment, this should be secured
-    const apiKey = "d79ad189f48201a768c591af850c9674";
+    🔐 **API Key Notice:**  
+This project uses the OpenWeather API. For security reasons, the API key has been removed from the public repository.  
+A fully functional demo is available here: [Your https://dtc-wsuv.org/zthompson24/weather/index.html]
+
+Please contact me if you require access to the full demo code.
+;
     
     // Update current date and time when the page loads
     document.addEventListener('DOMContentLoaded', () => {
